# whatsapp-desktop-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/00-setup-and-permissions-skeleton/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md  00-CONTEXT.md  00-DISCUSSION-LOG.md  00-RESEARCH.md  00-VERIFICATION.md
.planning/phases/01-read-mvp-read-only/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-send-ui-automation-guardrails/: 02-01-PLAN.md  02-01-SPIKES.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-hardening-and-distribution/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-rust-port-parallel-binary/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Formula/: whatsapp-desktop-mcp.rb  whatsapp-mcp.rb
docs/: release-setup.md  tested_versions.md
examples/: claude_desktop_config.json
scripts/: build-pkg.sh  distribution.xml
scripts/pkg-resources/: welcome.html
src/whatsapp_desktop_mcp/: __main__.py  cli.py  exceptions.py  paths.py  server.py  time.py
src/whatsapp_desktop_mcp/dev/: __init__.py  reset_rate_limit.py
src/whatsapp_desktop_mcp/models/: __init__.py  chat.py  doctor.py  group.py  media.py  message.py  send.py
src/whatsapp_desktop_mcp/permissions/: accessibility.py  automation.py  fda.py  osascript.py
src/whatsapp_desktop_mcp/reader/: __init__.py  chats.py  connection.py  contacts.py  groups.py  media.py  messages.py  schema_v1.py  search.py  search_fts5.py  tested_versions.py
src/whatsapp_desktop_mcp/sender/: __init__.py  audit.py  ax_assert.py  cross_chat_quote.py  deeplink.py  osascript_send.py  rate_limit.py  ui_send.py  verify.py
src/whatsapp_desktop_mcp/tools/: _decorators.py  doctor.py  extract_recent.py  get_chat_metadata.py  get_message_context.py  list_chats.py  read_chat.py  search_contacts.py  search_messages.py  send_message.py
src/whatsapp_mcp/: __main__.py  cli.py  exceptions.py  paths.py  server.py  time.py
src/whatsapp_mcp/models/: __init__.py  chat.py  contact.py  coverage.py  cursor.py  doctor.py  group.py  message.py  send.py
src/whatsapp_mcp/permissions/: accessibility.py  automation.py  fda.py  osascript.py
src/whatsapp_mcp/reader/: __init__.py  chats.py  contacts.py  groups.py  media.py  messages.py  schema_v1.py  search.py  search_fts5.py  tombstones.py
src/whatsapp_mcp/sender/: __init__.py  audit.py  ax_assert.py  cross_chat_quote.py  deeplink.py  osascript_send.py  rate_limit.py  ui_send.py  verify.py
src/whatsapp_mcp/tools/: doctor.py  extract_recent.py  get_chat_metadata.py  get_message_context.py  list_chats.py  read_chat.py  search_contacts.py  search_messages.py  send_message.py
tests/: conftest.py
tests/integration/: test_live_doctor.py  test_live_reader.py  test_live_send.py  test_release_smoke.py
tests/unit/: conftest.py  test_audit_rotation.py  test_cursor.py  test_dev_subcommand.py  test_doctor_degraded_warning.py  test_doctor_tool.py  test_exceptions.py  test_isolation.py  test_models_phase1.py  test_paths_phase1.py  test_read_only_mode.py  test_readme_install_matrix.py  test_stdout_purity.py  test_tested_versions_parser.py  test_time.py
tests/unit/test_permissions/: test_accessibility.py  test_automation.py  test_fda.py  test_osascript.py
tests/unit/test_reader/: __init__.py  test_chats_messages.py  test_concurrency.py  test_connection.py  test_contacts.py  test_media.py  test_schema_v1.py  test_search_fts5.py  test_tombstones.py
tests/unit/test_sender/: __init__.py  test_audit.py  test_ax_assert.py  test_cross_chat_quote.py  test_deeplink.py  test_osascript_send.py  test_rate_limit.py  test_ui_send.py  test_verify.py
tests/unit/test_tools/: __init__.py  test_decorators.py  test_doctor_phase1.py  test_read_tools_registration.py  test_search_messages_dispatch.py  test_send_message.py
