# pyproject.toml
[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-mcp"
version = "0.1.0"
description = "MCP stdio server for the macOS WhatsApp Desktop app — read history and send messages from Claude Desktop / Claude Code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }  # Claude's discretion per CONTEXT.md
authors = [
    { name = "WhatsApp MCP contributors" },
]
keywords = ["mcp", "model-context-protocol", "whatsapp", "macos", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]==1.27.1",
    "pydantic>=2.7,<3",
    # pyobjc — Phase 2 D-05: runtime dep for AX-API state assertion (sender/ax_assert.py).
    # The AX preflight (D-03) is the load-bearing P5 mitigation against wrong-chat
    # fuzzy sends; pyobjc reads the focused WhatsApp window's chat header via
    # ApplicationServices. NOT in [project.optional-dependencies] dev — this is
    # required at runtime on the user's machine, not just CI.
    "pyobjc-core>=12.1",
    "pyobjc-framework-Cocoa>=12.1",
    "pyobjc-framework-ApplicationServices>=12.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-subprocess>=1.5",
    "pyyaml>=6",
]

[project.scripts]
whatsapp-mcp = "whatsapp_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/gladia/whatsapp-mcp"
Issues = "https://github.com/gladia/whatsapp-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_mcp"]

# ---------- Lint ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade (use modern syntax for our 3.12 floor)
    "TID",   # flake8-tidy-imports
    "T201",  # NO print() — Pitfall P7 / SETUP-03
]
# T201 is in `select`; we leave it un-ignored so violations are errors.

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use print for debugging when failing.
"tests/**/*.py" = ["T201"]

[tool.ruff.format]
# Defaults are fine; explicit for clarity.
quote-style = "double"
indent-style = "space"

# ---------- Types ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest-subprocess fixtures are loosely typed.
module = "pytest_subprocess.*"
ignore_missing_imports = true

# ---------- Tests ----------
[tool.pytest.ini_options]
minversion = "8.2"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "live: requires a live macOS environment with WhatsApp installed (RUN_LIVE=1)",
]
